fix api message and conservation sent message in  conservation
